--- a/main-book.tex
+++ b/main-book.tex
@@ -32,7 +32,8 @@
 
 \usepackage{csquotes}
 \usepackage[backend=biber]{biblatex}
-\addbibresource{bibliography.bib}
+\addbibresource{bib/bibliography.bib}
+\addbibresource{bib/rfc.bib}
 
 \renewbibmacro*{finentry}{%
   \iffieldundef{annotation}
