--- a/tex/abbreviations.tex
+++ b/tex/abbreviations.tex
@@ -24,6 +24,7 @@
 \newabbreviation{DHCP}{DHCP}{Dynamic Host Configuration Protocol}
 \newabbreviation{DMZ}{DMZ}{demilitarised zone}
 \newabbreviation{DNS}{DNS}{Domain Name System}
+\newabbreviation{DNSSEC}{DNSSEC}{DNS security extensions}
 \newabbreviation{DORA}{DORA}{discover, offer, request, and acknowledge}
 \newabbreviation{EAP}{EAP}{Extensible Authentication Protocol}
 \newabbreviation{EIGRP}{EIGRP}{Enhanced Interior Gateway Routing Protocol}
